# scantailor-spectre

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AppIcon.icns  BUILD_LOG.md  CHANGELOG_SESSION.md  CLAUDE.md  CMakeLists.txt  FAILURES.md  HANDOFF.md  README.md  SESSION_2026-04-10_HANDOFF.md  SIGNING.md  ScanTailor Spectre.app  TODO.md  UI_REDESIGN.md  compatibility.md  permissions.md  scantailor-spectres.icns  scantailor-startup-spec.md  version.h.in
src/acceleration/: CMakeLists.txt  MetalContext.h  MetalContext.mm  MetalGaussBlur.h  MetalGaussBlur.mm  MetalLifecycle.h  MetalLifecycle.mm  MetalMorphology.h  MetalMorphology.mm
src/acceleration/shaders/: gauss_blur.metal  morphology.metal
src/app/: AboutDialog.ui  AppController.cpp  AppController.h  AutoProcessDialog.cpp  AutoProcessDialog.h  AutoProcessDialog.ui  BatchProcessingSummaryDialog.cpp  BatchProcessingSummaryDialog.h  CMakeLists.txt  ContentCoverageSummaryDialog.cpp  ContentCoverageSummaryDialog.h  DefaultParamsDialog.cpp  DefaultParamsDialog.ui  FixDpiDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  NewOpenProjectPanel.cpp  NewOpenProjectPanel.h  NewOpenProjectPanel.ui  PageBoxSummaryDialog.cpp  PageBoxSummaryDialog.h  PageSizeWarningDialog.cpp  PageSizeWarningDialog.h  PdfImportDialog.cpp  PdfImportDialog.h  ProjectFilesDialog.cpp  RelinkablePathVisualization.cpp  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  StartupWindow.cpp  StartupWindow.h  StatusBarPanel.cpp  StatusBarPanel.ui  ThumbnailSequence.cpp  ThumbnailSequence.h  main.cpp
src/core/: AbstractCacheDrivenOutputTask.h  AbstractOutputTask.h  AppleVisionDetector.h  AppleVisionDetector.mm  Application.cpp  Application.h  ApplicationSettings.cpp  ApplicationSettings.h  BackgroundExecutor.cpp  BackgroundTask.h  BookLookup.cpp  BookLookup.h  BookMetadata.cpp  BookMetadata.h  CMakeLists.txt  CenteredTickSlider.cpp  CenteredTickSlider.h  CollapsibleGroupBox.cpp  CollapsibleGroupBox.h  DebugImageView.cpp  DebugImageView.h  DebugImagesImpl.h  DefaultParams.cpp  DefaultParamsProvider.cpp  Despeckle.cpp  DurationFormatter.cpp  DurationFormatter.h  EstimateBackground.cpp  EstimateBackground.h  FilterOptionsWidget.h  ImageLoader.cpp  ImageLoader.h  ImageMetadataLoader.cpp  ImageTypeDetector.cpp  ImageTypeDetector.h  ImageViewBase.cpp  ImageViewBase.h  LeptonicaDetector.cpp  LeptonicaDetector.h  LoadFileTask.cpp  (+38 more)
src/core/filters/deskew/: CacheDrivenTask.cpp  CacheDrivenTask.h  Filter.cpp  Filter.h  OptionsWidget.cpp  OptionsWidget.h  OptionsWidget.ui  Task.cpp  Task.h
src/core/filters/export/: CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  Filter.cpp  Filter.h  MetadataGuesser.cpp  MetadataGuesser.h  OptionsWidget.cpp  OptionsWidget.h  OptionsWidget.ui  Settings.cpp  Settings.h  Task.cpp  Task.h
src/core/filters/finalize/: AutoColorDecisionReset.cpp  AutoColorDecisionReset.h  AutoColorModePolicy.h  CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  Filter.cpp  Filter.h  ImageView.cpp  ImageView.h  OptionsWidget.cpp  OptionsWidget.h  OptionsWidget.ui  Settings.cpp  Settings.h  Task.cpp  Task.h  Thumbnail.cpp  Thumbnail.h
src/core/filters/fix_orientation/: OptionsWidget.cpp  OptionsWidget.h  OptionsWidget.ui
src/core/filters/ocr/: CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  Filter.cpp  Filter.h  ImageView.cpp  ImageView.h  OcrOptionsWidget.ui  OcrResult.cpp  OcrResult.h  OptionsWidget.cpp  OptionsWidget.h  Settings.cpp  Settings.h  Task.cpp  Task.h  Thumbnail.cpp  Thumbnail.h
src/core/filters/output/: ApplyColorsDialog.cpp  ApplyColorsDialog.h  BlackWhiteOptions.cpp  BlackWhiteOptions.h  CacheDrivenTask.cpp  CacheDrivenTask.h  ColorCommonOptions.cpp  ColorCommonOptions.h  ColorParams.cpp  ColorParams.h  FillZoneEditor.cpp  Filter.cpp  Filter.h  OptionsWidget.cpp  OptionsWidget.h  OptionsWidget.ui  OtsuBinarizationOptionsWidget.ui  OutputGenerator.cpp  OutputImageParams.cpp  OutputImageParams.h  OutputProcessingParams.cpp  OutputProcessingParams.h  Params.cpp  RenderParams.cpp  Settings.cpp  Settings.h  Task.cpp  Task.h
src/core/filters/page_box/: ApplyDialog.cpp  ApplyDialog.h  ApplyDialog.ui  CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  Dependencies.cpp  Dependencies.h  Filter.cpp  Filter.h  ImageView.cpp  ImageView.h  OptionsWidget.cpp  OptionsWidget.h  OptionsWidget.ui  OrderByHeightProvider.cpp  OrderByHeightProvider.h  OrderByWidthProvider.cpp  OrderByWidthProvider.h  PageFinder.cpp  PageFinder.h  Params.cpp  Params.h  Settings.cpp  Settings.h  Task.cpp  Task.h  Thumbnail.cpp  Thumbnail.h
src/core/filters/page_layout/: CacheDrivenTask.cpp  CacheDrivenTask.h  Filter.cpp  Filter.h  ImageView.cpp  ImageView.h  OptionsWidget.cpp  OptionsWidget.h  OptionsWidget.ui  Params.cpp  Params.h  Settings.cpp  Settings.h  Task.cpp  Task.h  Utils.cpp
src/core/filters/page_split/: CMakeLists.txt  Dependencies.cpp  Dependencies.h  Filter.h  ImageView.cpp  OptionsWidget.cpp  OptionsWidget.h  OptionsWidget.ui  PageLayout.cpp  PageLayoutAdapter.cpp  PageLayoutEstimator.cpp  Settings.cpp  Settings.h  SpineDarknessFinder.cpp  SpineDarknessFinder.h  Task.cpp  VertLineFinder.cpp  VertLineFinder.h
src/core/filters/select_content/: ContentBoxFinder.cpp  ContentBoxFinder.h  Filter.cpp  Filter.h  OptionsWidget.cpp  OptionsWidget.h  OptionsWidget.ui  Settings.cpp  Settings.h  Task.cpp  Task.h
src/core/interaction/: DragHandler.h  InteractiveXSpline.h  ZoomHandler.cpp
src/core/tests/: CMakeLists.txt  ColorDetectionDiagnostic.cpp  TestAutoColorModePolicy.cpp  TestBatchProcessingContext.cpp  TestColorDetection.cpp  TestDurationFormatter.cpp  TestOcrResult.cpp  TestPdfExporter.cpp  TestPdfReader.cpp  TestProjectFolder.cpp  TestProjectPortability.cpp
src/core/weasel/: GenericPanelBridge.cpp  GenericPanelBridge.h  PhotoAdjustments.cpp  PhotoAdjustments.h  PhotoAdjustmentsWebView.cpp  PhotoAdjustmentsWebView.h  TonalCurve.cpp  TonalCurve.h  WebOptionsPanelBase.cpp  WebOptionsPanelBase.h
src/core/weasel/webui/: fix_orientation.html  photo_adjustments.html  webui.qrc
src/core/zones/: ZoneInteractionContext.h
(+41 files in other folders)
